--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
   } 
   
   .box-two {
-    background-color: blue;
+    background-color: green;
     border: 0 solid yellow;
+    padding: 20px;
+    margin: 20px;
+    border-width: 20px;
   } 
